--- a/app/assets/stylesheets/components/_articulo1.scss
+++ b/app/assets/stylesheets/components/_articulo1.scss
@@ -1,13 +1,14 @@
-.container {
+.container-articulo1 {
+
+    width: 60%;
+    margin: 0 auto;
     font-size: 25px;
-}
-
-.container h1 {
+    h1 {
     color: #957fef;
-}
-
-.container h2 {
+    }
+    h2 {
     color: #629D64;
+}
 }
 
 .img-articulo1 {
