--- a/app/views/pages/articulo1.html.erb
+++ b/app/views/pages/articulo1.html.erb
@@ -1,5 +1,5 @@
 
-        <div class="container">
+        <div class="container-articulo1">
             <br>
             <h2 class="text-center">Idea de Investigación</h2>
             <br>
@@ -7,7 +7,7 @@
             <br>
             <p class="text-center">martes 18 de Mayo, 2018 | Autor: Mariamer Henriquez</p>
             <br>
-            <%= image_tag "Abrumado_tesis.jpg", class:"img-articulo1"%>
+            <%= image_tag "Abrumado_tesis.jpg", class:"img-articulo1 text-center"%>
             <br>
                 <div class="centro_articulo">
                 <h1 class="text-center">Toda tesis tiene múltiples caminos</h1>
