--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -162,3 +162,13 @@
   padding-left: 2rem;
   text-align: right;
 }
+
+.card-title {
+  color: #8240FF;
+  text-decoration: none;
+}
+
+.card-title:hover {
+  color: #8240FF;
+  text-decoration: none;
+}
