--- a/app/views/lines/_dashboard.html.erb
+++ b/app/views/lines/_dashboard.html.erb
@@ -12,9 +12,9 @@
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
           <% @lines.each_with_index do |line, i| %>
             <% if i.zero? %>
-              <a class="nav-link active text-center mb-3" id="v-pills-<%= line.abrv %>-tab" data-toggle="pill" href="#v-pills-<%= line.abrv %>" role="tab" aria-controls="v-pills-<%= line.abrv %>" aria-selected="true"><i class="<%= line.icon_tag %>"></i></a>
+              <a class="nav-link active text-center mb-3" id="v-pills-<%= line.abrv %>-tab" data-toggle="pill" href="#v-pills-<%= line.abrv %>" role="tab" aria-controls="v-pills-<%= line.abrv %>" aria-selected="true" data-placement="right" title="<%= line.name%>"><i class="<%= line.icon_tag %>"></i></a>
             <% else %>
-              <a class="nav-link text-center mb-3" id="v-pills-<%= line.abrv %>-tab" data-toggle="pill" href="#v-pills-<%= line.abrv %>" role="tab" aria-controls="v-pills-<%= line.abrv %>" aria-selected="false"><i class="<%= line.icon_tag %>"></i></a>
+              <a class="nav-link text-center mb-3" id="v-pills-<%= line.abrv %>-tab" data-toggle="pill" href="#v-pills-<%= line.abrv %>" role="tab" aria-controls="v-pills-<%= line.abrv %>" aria-selected="false" title="<%= line.name%>" ><i class="<%= line.icon_tag %>"></i></a>
             <% end %>
           <% end %>
         </div>
@@ -25,14 +25,19 @@
       <h1>
         Welcome <span><%= current_user.first_name %></span>
       </h1>
-      <div class="avatar-btn">
-        <i class="fas fa-bars"></i>
+      <div class="avatar-btn dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="false">
+        <%# <i class="fas fa-bars"></i> %>
         <% if current_user.photo.key %>
               <%= cl_image_tag current_user.photo.key, class: "avatar" %>
             <% else %>
               <%= image_tag 'avatar-default.jpg', class: "avatar" %>
             <% end %>
       </div>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+          <%= link_to "Mi perfil", about_path, class: "dropdown-item" %>
+          <%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+        </div>
+
     </div>
     <div class="bar-space"></div>
     <div class="tab-content" id="v-pills-tabContent">
