--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -8,18 +8,9 @@
       <strong>Correo electrónico</strong>
       <p><%= @user.email %></p>
     </div>
-  <div class="tabbed-pane-nav u-clearfix js-nav">
-    <ul>
-      <li class="tabbed-pane-nav-item">
-        <a class="tabbed-pane-nav-item-button js-member-profile active">Nombres y apellidos</a>
-        <p><%= "#{@user.first_name} #{@user.last_name}" %></p>
-      </li>
-      <li class="tabbed-pane-nav-item">
-        <a class="tabbed-pane-nav-item-button js-member-activity">Correo electrónico</a>
-        <p><%= @user.email %></p>
-      </li>
-    </ul>
   </div>
 
-    <p><%= link_to 'Edita tu perfil', edit_user_registration_path, class:"btn btn-verde" %></p>
+    <%# <p><%= link_to 'dashoard', dashboard %></p>
+    <p><%= link_to 'Edita tu perfil', edit_user_registration_path %></p>
+    <p><%= link_to 'Ir al dashboard', lines_path %></p>
 </div>
