enlace articulo-recurso

--- a/app/views/pages/articulo1.html.erb
+++ b/app/views/pages/articulo1.html.erb
@@ -41,4 +41,5 @@
                 <p>De esta manera, podemos ir descartando no sólo en cuanto a tema, sino en lo concerniente a los recursos mínimos que nos permitan recolectar la información suficiente para darle respuesta a las primeras interrogantes.</p>
             </div>
         </div>
+        <a><%= link_to 'regresar', recursos_path%></a>
         <%= render 'shared/footer' %>
