--- a/app/views/pages/recursos.html.erb
+++ b/app/views/pages/recursos.html.erb
@@ -29,7 +29,7 @@
           <div class="recursos-card-content">
           <h6><strong>IDEA DE INVESTIGACIÓN</strong></h6>
           <h5>¿Por dónde empezar?</h5>
-          <p>¿Te sientes abrumado por el proyecto de investigación? No te preocupes aquí te enseñamos los primeros pasos.</p>
+          <p>¿Te sientes abrumado por el proyecto de investigación? No te preocupes aquí te enseñamos los primeros pasos.<a><%= link_to '>mas<', articulo1_path%></a></p>
           <p><strong>Autor:</strong> Mariamer Henriquez</p>
           <p><strong>Jueves 13 May, 2018</strong></p>
           </div>
