--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,9 +13,9 @@
   <div class=" col-sm-4 col-md col-sm-4  col-12 col">
     <h5 class="headin5_amrc col_white_amrc pt2">Bi.Thesis</h5>
     <ul class="footer_ul_amrc">
-      <li><a href="#conocenos">Nuestro equipo</a></li>
-      <li><a href="#conocenos">FAQ</a></li>
-      <li><a href="#conocenos">Bitácora Solutions</a></li>
+      <li><a href="/#conocenos">Nuestro equipo</a></li>
+      <li><a href="/#conocenos">FAQ</a></li>
+      <li><a href="/#conocenos">Bitácora Solutions</a></li>
     </ul>
   </div>
 
