--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -62,7 +62,7 @@
       </div>
 
       <div class="form-actions">
-        <%= f.button :submit, "Sign up", class: 'btn-registro' %>
+        <%= f.button :submit, "Registrarse", class: 'btn-registro' %>
       </div>
     <% end %>
 
