--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -14,6 +14,7 @@
   align-items: center;
   background-color: #FFFFFF;
 }
+
 .background-register{
   background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
   height: 500px;
@@ -86,4 +87,34 @@ input {
 .form-login a {
   color: black !important;
   font-weight: lighter !important;
+}
+
+
+.background-perfil {
+  background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1523580846011-d3a5bc25702b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
+  height: 300px;
+  background-position: 38%;
+  background-size: cover;
+}
+
+.container-perfil {
+  margin: 0 auto;
+  margin-top: -300px;
+}
+
+.card-perfil-2 {
+  padding: 3%;
+  background: white;
+  margin: 121px;
+  width: 75%;
+}
+
+.img-perfil {
+  width: 47%;
+  height: 233px;
+}
+
+.title-perfil {
+  color: white;
+  font-weight: bold;
 }
