--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,25 +1,22 @@
-<div class="container mt-5">
+<div class="background-perfil">
 
-  <h1 class="display-4" >¡Hola <%= current_user.first_name %>!</h1>
-  <div class="profile d-flex justify-content-between">
-    <div class='flex-fill'>
-      <strong>Nombres y apellidos</strong>
-      <p><%= "#{@user.first_name} #{@user.last_name}" %></p>
-      <strong>Correo electrónico</strong>
-      <p><%= @user.email %></p>
-    </div>
-  <div class="tabbed-pane-nav u-clearfix js-nav">
-    <ul>
-      <li class="tabbed-pane-nav-item">
-        <a class="tabbed-pane-nav-item-button js-member-profile active">Nombres y apellidos</a>
-        <p><%= "#{@user.first_name} #{@user.last_name}" %></p>
-      </li>
-      <li class="tabbed-pane-nav-item">
-        <a class="tabbed-pane-nav-item-button js-member-activity">Correo electrónico</a>
-        <p><%= @user.email %></p>
-      </li>
-    </ul>
+</div>
+
+<div class='container-perfil'>
+<br>
+<br>
+  <div class="title-perfil text-center">
+    <h1>¡Hola <%= current_user.first_name %>!</h1>
   </div>
-
-    <p><%= link_to 'Edita tu perfil', edit_user_registration_path, class:"btn btn-verde" %></p>
+  <div class="card-perfil-2 d-flex justify-content-between">
+    <div>
+      <h4><strong>Nombres y apellidos</strong></h4>
+      <p><%= "#{@user.first_name} #{@user.last_name}" %></p>
+      <h4><strong>Correo electrónico</strong></h4>
+      <p><%= @user.email %></p>
+      <p><%= link_to 'Edita tu perfil', edit_user_registration_path, class:"btn-yours" %></p>
+    </div>
+    <br>
+    <%= image_tag "perfil.jpg", class:"img-perfil" %>
+  </div>
 </div>
