--- a/app/views/pages/articulo1.html.erb
+++ b/app/views/pages/articulo1.html.erb
@@ -1,44 +1,46 @@
+<div class="container">
+  <br>
+  <div class="d-flex justify-content-between">
+    <h3 class="title">IDEA DE INVESTIGACIÓN</h3>
+    <p>Martes 18 de Mayo, 2018 | Autor: Mariamer Henriquez</p>
+  </div>
+  <h1 class="title-1">¿Por dónde empezar?</h1>
+  <br>
+  <div class="d-flex">
+    <%= image_tag "Abrumado_tesis.jpg", class:"img-articulo1"%>
+    <div class="centro_articulo">
+      <h4>Toda tesis tiene múltiples caminos</h4>
+      <p>Entiendo que te puedas sentir abrumado ante el reto de un trabajo tan grande como la tesis, y por ende no hayas por donde empezar, todo el mundo te da consejos diferentes lo cual genera que en vez de sentirte orientado dudes más de lo que tienes que hacer. No te abrumes más, aquí te indicamos los pasos elementales para que puedas ir marcando un norte.</p>
+    </div>
+  </div>
+  <div class="d-flex">
+    <div class="text-subtitulo-2">
+      <h4>No te apresures en seleccionar un tema de inmediato</h4>
+      <p>Estoy segura que muchos de los consejos coincidian en que debes apresurarte en seleccionar tema y tutor, mi consejo es que te tomes un tiempo (con perseverancia), teniendo en cuenta que:</p>
+      <div class="card-articulo">
+        <h5>Lo más importante a la hora de empezar es tomar en consideración que no hay un camino único para desarrollar tu tesis, un tema puede ser investigado con varias metodologías, por eso, lo mejor es ir mapeando posibilidades, hay miles y lo ideal es seleccionar la que más se adpate a tus necesidades e intereses.</h5>
+      </div>
+    </div>
+    <%= image_tag "empieza_escribir.jpg", class:"img-articulo1-2"%>
+  </div>
+  <br>
+  <div class="text-secundario">
+    <p>Ante ello, como siempre recomiendo a mis estudiantes no veas la tesis como un problema, entiendo que lamentablemente muchos asesores indican que busques un problema y ese será tu tema, considero que la frase más bien genera resistencia y nos ayudaría mucho más pensar lo siguiente:</p>
+    <div class="text-subtitulo">
+      <h4>¿Qué me hace ruido?</h4>
+    </div>
+    <p>Prefiero decirle a mis asesorados que piensen primero es qué les hace ruido dentro de las actividades cotidianas, ya sea en el trabajo, hogar o sociedad, de los aspectos relacionados con el área de conocimiento sobre la cual versa el grado académico que requiere la tesis, haciéndote las siguiente pregunta:</p>
+    <p>¿Lo que me llama la atención tiene una respuesta de solución un si o un no?</p>
+    <p>Si la respuesta a tu interrogante tiene como respuesta que si está solucionado, entonces no tenemos un posible tema de investigación, si por el contrario no le encuentras respuestas, es muy probable que estés ante un tema de investigación viable, sin embargo, te faltan algunos detalles por considerar para determinar si realmente lo puedes desarrollar:</p>
+    <ul>
+      <li>¿Tengo alcance a suficiente información (recursos bibliográficos)?</li>
+      <li>Si se trata de una empresa por ejemplo: ¿La misma me suministrará la información y permisos necesarios?</li>
+      <li>Si se trata de algún tema social: ¿Tengo alcance a un determinado grupo de personas para preguntarles de dicho tema?</li>
+      <li>En el caso de documentos, por ejemplo para los del área de leyes: ¿Todo lo que necesito indagar esta en la norma, o debo ubicar sentencias, jurisprudencias, entre otros?, ¿Cuento con los permisos necesarios?</li>
+    </ul>
+    <p>De esta manera, podemos ir descartando no sólo en cuanto a tema, sino en lo concerniente a los recursos mínimos que nos permitan recolectar la información suficiente para darle respuesta a las primeras interrogantes.</p>
+  </div>
+  <br>
+</div>
 
-        <div class="container-articulo1">
-            <br>
-            <h2 class="text-center">Idea de Investigación</h2>
-            <br>
-            <h1 class="text-center">¿Por dónde empezar?</h1>
-            <br>
-            <p class="text-center">martes 18 de Mayo, 2018 | Autor: Mariamer Henriquez</p>
-            <br>
-            <%= image_tag "Abrumado_tesis.jpg", class:"img-articulo1 text-center"%>
-            <br>
-                <div class="centro_articulo">
-                <h1 class="text-center">Toda tesis tiene múltiples caminos</h1>
-                <br>
-                <p>Entiendo que te puedas sentir abrumado ante el reto de un trabajo tan grande como la tesis, y por ende no hayas por donde empezar, todo el mundo te da consejos diferentes lo cual genera que en vez de sentirte orientado dudes más de lo que tienes que hacer. No te abrumes más, aquí te indicamos los pasos elementales para que puedas ir marcando un norte.</p>
-                <br>
-                <div class = "text-center">
-                    <%= image_tag "empieza_escribir.jpg", class:"img-articulo1a"%>
-                </div>
-                <h1 class="text-center">No te apresures en seleccionar un tema de inmediato</h1>
-                <br>
-                <p>Estoy segura que muchos de los consejos coincidian en que debes apresurarte en seleccionar tema y tutor, mi consejo es que te tomes un tiempo (con perseverancia), teniendo en cuenta que:</p>
-                <br>
-                <h2>Lo más importante a la hora de empezar es tomar en consideración que no hay un camino único para desarrollar tu tesis, un tema puede ser investigado con varias metodologías, por eso, lo mejor es ir mapeando posibilidades, hay miles y lo ideal es seleccionar la que más se adpate a tus necesidades e intereses</h2>
-                <br>
-                <p>Ante ello, como siempre recomiendo a mis estudiantes no veas la tesis como un problema, entiendo que lamentablemente muchos asesores indican que busques un problema y ese será tu tema, considero que la frase más bien genera resistencia y nos ayudaría mucho más pensar lo siguiente:</p>
-                <br>
-                <h1 class="text-center">¿Qué me hace ruido?</h1>
-                <br>
-                <p>Prefiero decirle a mis asesorados que piensen primero es qué les hace ruido dentro de las actividades cotidianas, ya sea en el trabajo, hogar o sociedad, de los aspectos relacionados con el área de conocimiento sobre la cual versa el grado académico que requiere la tesis, haciéndote las siguiente pregunta:</p>
-                <br>
-                <p class="text-center">¿Lo que me llama la atención tiene una respuesta de solución un si o un no?</p>
-                <br>
-                <p>Si la respuesta a tu interrogante tiene como respuesta que si está solucionado, entonces no tenemos un posible tema de investigación, si por el contrario no le encuentras respuestas, es muy probable que estés ante un tema de investigación viable, sin embargo, te faltan algunos detalles por considerar para determinar si realmente lo puedes desarrollar:</p>
-                <ul>
-                    <li>¿Tengo alcance a suficiente información (recursos bibliográficos)?</li>
-                    <li>Si se trata de una empresa por ejemplo: ¿La misma me suministrará la información y permisos necesarios?</li>
-                    <li>Si se trata de algún tema social: ¿Tengo alcance a un determinado grupo de personas para preguntarles de dicho tema?</li>
-                    <li>En el caso de documentos, por ejemplo para los del área de leyes: ¿Todo lo que necesito indagar esta en la norma, o debo ubicar sentencias, jurisprudencias, entre otros?, ¿Cuento con los permisos necesarios?</li>
-                </ul>
-                <p>De esta manera, podemos ir descartando no sólo en cuanto a tema, sino en lo concerniente a los recursos mínimos que nos permitan recolectar la información suficiente para darle respuesta a las primeras interrogantes.</p>
-            </div>
-        </div>
-        <%= render 'shared/footer' %>
+<%= render 'shared/footer' %>
