--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -66,6 +66,10 @@
 input {
   border-radius: 15px !important;
   border: 1px solid #C4A5FF !important;
+  &:focus {
+    border: 0px solid #C4A5FF !important;
+    box-shadow: 0 0 0 0.2rem #C4A5FF !important;
+  }
 }
 
 .form-check {
