--- a/app/views/pages/recursos.html.erb
+++ b/app/views/pages/recursos.html.erb
@@ -15,7 +15,7 @@
         </div>
         <h5>Tu tesis como punto estratégico en tu proyecto de vida</h5>
         <p class="text-justify">En el caso de que necesites desarrollar un trabajo de investigación para optar por un grado acadpemico, resulta estratégico para tu vida personal y profesional el dejar de verla como un mero requisito y convertirla más bien en la punta de lanza de tu plan de crecimiento.</p>
-        <a href="#" class="btn-yours">Más detalle</a>
+        <%= link_to 'Mas detalles',articulo1_path, class: 'btn-yours' %>
       </div>
     </div>
   </div>
@@ -29,7 +29,7 @@
           <div class="recursos-card-content">
           <h6><strong>IDEA DE INVESTIGACIÓN</strong></h6>
           <h5>¿Por dónde empezar?</h5>
-          <p>¿Te sientes abrumado por el proyecto de investigación? No te preocupes aquí te enseñamos los primeros pasos.<a><%= link_to '>mas<', articulo1_path%></a></p>
+          <p>¿Te sientes abrumado por el proyecto de investigación? No te preocupes aquí te enseñamos los primeros pasos.</p>
           <p><strong>Autor:</strong> Mariamer Henriquez</p>
           <p><strong>Jueves 13 May, 2018</strong></p>
           </div>
