--- a/app/views/pages/articulo1.html.erb
+++ b/app/views/pages/articulo1.html.erb
@@ -41,7 +41,12 @@
     <p>De esta manera, podemos ir descartando no sólo en cuanto a tema, sino en lo concerniente a los recursos mínimos que nos permitan recolectar la información suficiente para darle respuesta a las primeras interrogantes.</p>
   </div>
   <br>
+  <div class="center">
+    <%= link_to 'Retornar',recursos_path, class: 'btn-yours' %>
+  </div>
+  <br>
 </div>
 
-<%= render 'shared/footer' %>
 
+
+<%= render 'shared/footer' %>
