--- a/app/views/lines/_no_interview.html.erb
+++ b/app/views/lines/_no_interview.html.erb
@@ -14,14 +14,18 @@
       <h1>
         Welcome <span><%= current_user.first_name %></span>
       </h1>
-      <div class="avatar-btn">
-        <i class="fas fa-bars"></i>
+      <div class="avatar-btn dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="false">
+        <%# <i class="fas fa-bars"></i> %>
         <% if current_user.photo.key %>
               <%= cl_image_tag current_user.photo.key, class: "avatar" %>
             <% else %>
               <%= image_tag 'avatar-default.jpg', class: "avatar" %>
             <% end %>
       </div>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+          <%= link_to "Mi perfil", about_path, class: "dropdown-item" %>
+          <%= link_to "Cerrar sesión", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+        </div>
     </div>
     <div class="bar-space"></div>
     <div class='container-entrevista'>
