--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Source+Sans+Pro:wght@600&family=Ubuntu:wght@300&display=swap');
+
+.card-container {
+  position: relative;
+}
+
 .card {
   box-shadow: 2px 2px 3px rgb(124, 119, 119);
   width: 278px;
@@ -13,6 +18,19 @@
     font-family: 'Poppins', sans-serif;
 
   }
+  transition: all 0.1s linear;
+  // position: absolute;
+  // z-index: 1000;
+  &:hover {
+    box-shadow: 0px 0px 15px #8340ff86;
+    width: 285px;
+    height: 350px;
+    margin-bottom: -50px !important;
+  }
+}
+
+#conocenos{
+  position: relative;
 }
 
 .cards {
