--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Source+Sans+Pro:wght@600&family=Ubuntu:wght@300&display=swap');
 
-.card-container {
-  position: relative;
-}
 
 .card {
   box-shadow: 2px 2px 3px rgb(124, 119, 119);
@@ -19,8 +16,7 @@
 
   }
   transition: all 0.1s linear;
-  // position: absolute;
-  // z-index: 1000;
+
   &:hover {
     box-shadow: 0px 0px 15px #8340ff86;
     width: 285px;
@@ -85,6 +81,7 @@
 }
 
 
+
 .interview-info {
   padding: 100px;
 }
@@ -98,54 +95,7 @@
   width: 472px;
   height: 292px;
 }
-.container-dashboard {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-}
 
-.main-dashboard {
-  flex-grow: 1;
-  padding: 25px 50px;
-  background-color: #FCFBFF;
-  .main-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    h1 {
-      color: #8240FF;
-      font-size: 36px;
-      font-weight: 500;
-      span{
-        color: black
-      }
-    }
-    .avatar-btn {
-      width: 130px;
-      height: 50px;
-      border: 1px solid #8240FF;
-      border-radius: 15px;
-      padding: 10px 25px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      i {
-        color: #8240FF;
-        font-size: 25px;
-      }
-      img {
-        width: 35px;
-        height: 35px;
-      }
-    }
-  }
-  .bar-space {
-    width: 100%;
-    height: 25px;
-    border-bottom: 1px solid #D7C3FF;
-    margin-bottom: 20px;
-  }
-}
 
 .card-text-recurso h5 {
   color: #8240FF;
@@ -167,16 +117,13 @@
 .card-final {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  background: #E2D8FF;
 }
 
 .card-final-2 {
   box-shadow: 2px 2px 3px rgb(124, 119, 119);
   background-color: white;
   padding: 3%;
-}
-
-.background-container-final {
-  background: #E2D8FF;
 }
 
 .card-text-3 {
@@ -204,5 +151,16 @@
   background: #FFE67D;
   h5{
     text-align: justify;
+  }
+}
+
+.card-task {
+  background-color: #edeaff;
+  border-radius: 5px;
+  width: 80%;
+  margin: 15px auto;
+  padding: 10px;
+  &:hover {
+    box-shadow: 0 0 10px #c1b6ff;
   }
 }
