--- a/app/views/lines/_dashboard.html.erb
+++ b/app/views/lines/_dashboard.html.erb
@@ -85,7 +85,7 @@
                             <div class="tab-pane fade show active" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">
                               <div class="content-dash">
                                 <p>
-                                <%= station.content %>
+                                <%= sanitize station.content %>
                                 </p>
                                 <%# <iframe src="http://docs.google.com/gview?url=http://www.educoas.org/portal/bdigital/contenido/valzacchi/ValzacchiCapitulo-2New.pdf&embedded=true" style="width:100%; height:700px;" frameborder="0" ></iframe> %>
                                 <% if station.tasks %>
@@ -105,7 +105,7 @@
                             <div class="tab-pane fade" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">
                               <div class="content-dash">
                                 <p>
-                                <%= station.content %>
+                                <%= sanitize station.content %>
                                 </p>
                                 <% if station.tasks %>
                                   <% station.tasks.each do |task| %>
@@ -165,7 +165,7 @@
                             <div class="tab-pane fade show active" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">
                               <div class="content-dash">
                                 <p>
-                                  <%= station.content %>
+                                  <%= sanitize station.content %>
                                 </p>
                                 <% if station.tasks %>
                                   <% station.tasks.each do |task| %>
@@ -184,7 +184,7 @@
                             <div class="tab-pane fade" id="nav-<%= station.abrv %>" role="tabpanel" aria-labelledby="nav-<%= station.abrv %>-tab">
                               <div class="content-dash">
                                 <p>
-                                  <%= station.content %>
+                                  <%= sanitize station.content %>
                                 </p>
                                 <% if station.tasks %>
                                   <% station.tasks.each do |task| %>
