--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -26,3 +26,32 @@
   margin-left: 50%;
   transform: translateX(-50%);
 }
+
+.btn-yours-2 {
+  color: black;
+  background: #ffdc5e;
+  padding: 11px 22px;
+  border-radius: 16px;
+  text-decoration: none;
+}
+
+.btn-yours-2:hover {
+  text-decoration: none;
+  color: black;
+  background: #FFE67D;
+}
+
+.btn-yours-3 {
+  color: black;
+  background: #ffdc5e;
+  padding: 3px 16px;
+  border-radius: 16px;
+  text-decoration: none;
+  width: 120px;
+}
+
+.btn-yours-3:hover {
+  text-decoration: none;
+  color: black;
+  background: #FFE67D;
+}
