--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -37,3 +37,12 @@
 .card-final-2 img.rounded {
   width: 24px;
 }
+
+.background-container-final {
+  background: #E2D8FF;
+}
+
+.img-home {
+  width: 570px;
+  height: 380px;
+}
