--- a/app/assets/stylesheets/pages/_recursos.scss
+++ b/app/assets/stylesheets/pages/_recursos.scss
@@ -29,3 +29,18 @@
 .recursos-card-content {
   width: 100%;
 }
+
+.img-recurso {
+  width: 472px;
+  height: 292px;
+}
+
+.container-recurso h1 {
+  color: #8240FF;
+  font-weight: bold;
+}
+
+.container-recurso-2 h1 {
+  color: #8240FF;
+  font-weight: bold;
+}
