--- a/app/views/lines/_dashboard.html.erb
+++ b/app/views/lines/_dashboard.html.erb
@@ -24,7 +24,7 @@
   <div class="main-dashboard">
     <div class='main-header'>
       <h1>
-        Welcome <span><%= current_user.first_name %></span>
+        Bienvenido <span><%= current_user.first_name %></span>
       </h1>
       <div class="avatar-btn dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="false">
         <%# <i class="fas fa-bars"></i> %>
