--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <h1>Bienvenido a Bi-Thesis</h1>
     <br>
-    <%= link_to 'Solicita una entrevista', new_user_registration_path, class: 'btn-yours' %>
+    <%= link_to 'Solicita una entrevista', new_user_registration_path, class: 'btn-yours-2' %>
   </div>
 </div>
 
@@ -87,7 +87,7 @@
               <p><strong>20/03/2015</strong></p>
             </div>
             <div class="text-user">
-              <h6>"La profe María (así le decía cuando me ayudó) es una persona muy dedicada, apasionada a su profesión y no deja por fuera su buen sentido del humor. Define muy bien cómo un profesional debe actuar y desempeñarse, recuerdo que en ocasiones podría no estar de acuerdo con algunas correcciones que me hacía con mi tesis pero sabía que el único motivo era que yo...</h6>
+              <h6>"La profe María (así le decía cuando me ayudó) es una persona muy dedicada, apasionada a su profesión y no deja por fuera su buen sentido del humor. Define muy bien cómo un profesional debe actuar y desempeñarse, recuerdo que en ocasiones podría no estar de acuerdo con algunas correcciones que me hacía con mi tesis pero sabía que el único motivo era que yo..."</h6>
             </div>
           </div>
         </div>
@@ -95,7 +95,7 @@
       <br>
       <div class="card-final-2">
         <div class="d-flex nombre-text">
-          <%= image_tag "robert_campos.png", class:"rounded" %>
+          <%= image_tag "juan_manuel.jpg", class:"rounded" %>
           <h5>Juan Manuel Reyes</h5>
         </div>
         <div class="linea-separacion">
@@ -115,7 +115,7 @@
       <br>
       <div class="card-final-2">
         <div class="d-flex nombre-text">
-          <%= image_tag "robert_campos.png", class:"rounded" %>
+          <%= image_tag "andre_felipe.jpg", class:"rounded" %>
           <h5>Andrés Felipe Iriarte</h5>
         </div>
         <div class="linea-separacion">
@@ -127,7 +127,7 @@
               <p><strong>11/02/2018</strong></p>
             </div>
             <div class="text-user">
-              <h6>"Necesitaba ayuda con mi tesis de ingeniería de sistemas desde cero, no tenía tema ni nada. Busqué la ayuda de www.servicioasesoriatesis.com y me apoyaron desde el principio hasta el final. su ayuda es profesional con personal idóneo y del mas alto nivel académico. Sin ninguna duda tienen un excelente...</h6>
+              <h6>"Necesitaba ayuda con mi tesis de ingeniería de sistemas desde cero, no tenía tema ni nada. Busqué la ayuda de www.servicioasesoriatesis.com y me apoyaron desde el principio hasta el final. su ayuda es profesional con personal idóneo y del mas alto nivel académico. Sin ninguna duda tienen un excelente..."</h6>
             </div>
           </div>
         </div>
