--- a/app/views/pages/recursos.html.erb
+++ b/app/views/pages/recursos.html.erb
@@ -1,5 +1,7 @@
-
 <div class="container">
+  <br>
+  <br>
+  <br>
   <div class="container-recurso">
     <br>
     <h1 class="text-center">Publicación más reciente</h1>
@@ -10,11 +12,11 @@
       </div>
       <div class="card-text-recurso">
         <div class="d-flex  justify-content-between">
-          <p>Martes 13 May, 2022</p>
+          <p>Martes 18 Mayo, 2021</p>
           <p>Autor: Mariamer henriquez</p>
         </div>
-        <h5>Tu tesis como punto estratégico en tu proyecto de vida</h5>
-        <p class="text-justify">En el caso de que necesites desarrollar un trabajo de investigación para optar por un grado acadpemico, resulta estratégico para tu vida personal y profesional el dejar de verla como un mero requisito y convertirla más bien en la punta de lanza de tu plan de crecimiento.</p>
+        <h5>¿Por dónde empezar?</h5>
+        <p class="text-justify">¿Te sientes abrumado por el proyecto de investigación? No te preocupes aquí te enseñamos los primeros pasos.</p>
         <%= link_to 'Mas detalles',articulo1_path, class: 'btn-yours' %>
       </div>
     </div>
@@ -28,10 +30,10 @@
         <div class="recursos-card">
           <div class="recursos-card-content">
           <h6><strong>IDEA DE INVESTIGACIÓN</strong></h6>
-          <h5>¿Por dónde empezar?</h5>
-          <p>¿Te sientes abrumado por el proyecto de investigación? No te preocupes aquí te enseñamos los primeros pasos.</p>
+          <h5>Plan de crecimiento</h5>
+          <p>Si vas a desarrollar un trabajo de investigación para optar por un grado academico, convierte esto en tu plan de crecimiento.</p>
           <p><strong>Autor:</strong> Mariamer Henriquez</p>
-          <p><strong>Jueves 13 May, 2018</strong></p>
+          <p><strong>Jueves 09 Septiembre, 2020</strong></p>
           </div>
         </div>
         <div class="recursos-card">
@@ -40,7 +42,7 @@
             <h5>¿Dónde buscar?</h5>
             <p>Una vez tenemos claro el tema de investigación, es importante encontrar la fundamentación teórica necesaria para tu proyecto.</p>
             <p><strong>Autor:</strong> Mariamer Henriquez</p>
-            <p><strong>Lunes 30 Octubre, 2018</strong></p>
+            <p><strong>Lunes 30 Octubre, 2019</strong></p>
           </div>
         </div>
         <div class="recursos-card">
@@ -49,7 +51,7 @@
             <h5>¿Por dónde empezar?</h5>
             <p>Probablemente tenemos el proyecto ideal, pero, ¿se puede?, aquí te enseñamos los facotres a considerar para no morir en el intento.</p>
             <p><strong>Autor:</strong> Mariamer Henriquez</p>
-            <p><strong>Sábado 3 Septiembre, 2019</strong></p>
+            <p><strong>Sábado 3 Septiembre, 2018</strong></p>
           </div>
         </div>
         <div class="recursos-card">
@@ -58,7 +60,7 @@
             <h5>¿Plagio?</h5>
             <p>Todo lo que debes saber para evitarlo.</p>
             <p><strong>Autor:</strong> Mariamer Henriquez</p>
-            <p><strong>Domingo 19 Septiembre, 2020</strong></p>
+            <p><strong>Domingo 19 Septiembre, 2017</strong></p>
           </div>
         </div>
         <div class="recursos-card">
@@ -67,7 +69,7 @@
             <h5>La asesoría de la investigación</h5>
             <p>Todo lo que debes tener en cuenta para organizar y aprovechar al máxima las entrevistas con tu asesor.</p>
             <p><strong>Autor:</strong> Mariamer Henriquez</p>
-            <p><strong>Lunes 02 Septiembre, 2019</strong></p>
+            <p><strong>Lunes 02 Septiembre, 2015</strong></p>
           </div>
         </div>
         <div class="recursos-card">
@@ -76,7 +78,7 @@
             <h5>Organización</h5>
             <p>Resumimos aquí los que debes considerar para organizar tu tiempo en el desarrollo de la tesis y avanzar acorde a lo planificado.</p>
             <p><strong>Autor:</strong> Mariamer Henriquez</p>
-            <p><strong>Martes 13 Mayo, 2018</strong></p>
+            <p><strong>Martes 13 Mayo, 2012</strong></p>
           </div>
         </div>
       </div>
