--- a/app/views/pages/cursos.html.erb
+++ b/app/views/pages/cursos.html.erb
@@ -1,33 +1,59 @@
-<div class="container my-5">
-  <div class="d-flex justify-content-between">
+<div class="container">
+  <br>
+  <br>
+  <br>
+  <div class="d-flex card-cursos justify-content-between">
     <div>
-      <div class="card m-2 p-0">
-        <%= image_tag "libros_3.jpg"%>
-        <div class="card-body">
-          <h5><%= link_to 'Recursos gratuitos', recursos_path, class: "card-title" %></h5>
-          <p class="card-text">Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
+      <div>
+        <div class="card-cursos-2 d-flex m-2 p-0">
+          <%= image_tag "libros_3.jpg", class:"img-cursos"%>
+          <div class="card-curso">
+            <h5>Recursos gratuitos</h5>
+            <p>Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
+            <div class="text-center">
+              <a href="#" class="btn-yours-3">Ver detalles</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="card-cursos-2 d-flex m-2 p-0">
+          <%= image_tag "libros_3.jpg", class:"img-cursos"%>
+          <div class="card-curso">
+            <h5>Recursos gratuitos</h5>
+            <p>Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
+            <div class="text-center">
+              <a href="#" class="btn-yours-3">Ver detalles</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div>
-      <div class="card m-2 p-0">
-        <%= image_tag "card-2.jpg"%>
-        <div class="card-body">
-          <h5 class="card-title">Nuestros cursos</h5>
-          <p class="card-text">Conoce nuestra oferta adaptada a tus necesidades y circunstancias.</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
+      <div>
+        <div class="card-cursos-2 d-flex m-2 p-0">
+          <%= image_tag "libros_3.jpg", class:"img-cursos"%>
+          <div class="card-curso">
+            <h5>Recursos gratuitos</h5>
+            <p>Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
+            <div class="text-center">
+              <a href="#" class="btn-yours-3">Ver detalles</a>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <div>
-      <div class="card m-2 p-0">
-        <%= image_tag "card-3.jpg"%>
-        <div class="card-body">
-          <h5><%= link_to 'Bi-Thesis Premium', new_user_registration_path, class: "card-title" %></h5>
-          <p class="card-text">Plan acompañamiento personalizado para desarrollar tu tesis.</p>
-        	<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
+      <div>
+        <div class="card-cursos-2 d-flex m-2 p-0">
+          <%= image_tag "libros_3.jpg", class:"img-cursos"%>
+          <div class="card-curso">
+            <h5>Recursos gratuitos</h5>
+            <p>Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
+            <div class="text-center">
+              <a href="#" class="btn-yours-3">Ver detalles</a>
+            </div>
+          </div>
+        </div>
+      <br>
       </div>
     </div>
   </div>
