--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<nav class="navbar fixed-top navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container">
     <div class="container-fluid">
       <a class="d-flex" style="align-items: center; text-decoration: none" href="/">
@@ -35,4 +35,4 @@
       </div>
     </div>
   </div>
-</div>
+</nav>
