creación cards de cursos y estilos, se cambió el fondo del background del body

--- a/app/views/pages/cursos.html.erb
+++ b/app/views/pages/cursos.html.erb
@@ -1,59 +1,43 @@
-<div class="container">
-  <br>
-  <br>
-  <br>
-  <div class="d-flex card-cursos justify-content-between">
-    <div>
-      <div>
-        <div class="card-cursos-2 d-flex m-2 p-0">
-          <%= image_tag "libros_3.jpg", class:"img-cursos"%>
-          <div class="card-curso">
-            <h5>Recursos gratuitos</h5>
-            <p>Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
-            <div class="text-center">
-              <a href="#" class="btn-yours-3">Ver detalles</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div>
-        <div class="card-cursos-2 d-flex m-2 p-0">
-          <%= image_tag "libros_3.jpg", class:"img-cursos"%>
-          <div class="card-curso">
-            <h5>Recursos gratuitos</h5>
-            <p>Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
-            <div class="text-center">
-              <a href="#" class="btn-yours-3">Ver detalles</a>
-            </div>
-          </div>
+<div class="container mt-7">
+  <div class="card-cursos">
+    <div class="card-cursos-2 d-flex m-4 p-0">
+      <%= image_tag "libros_3.jpg", class:"img-cursos"%>
+      <div class="card-curso">
+        <h5>Lineamientos Básicos de Citación</h5>
+        <p>En este curso aprenderás los aspectos elementales para citar y después adaptarlos a las normas que necesites</p>
+        <div class="text-center">
+          <a href="#" class="btn-yours-4">Ver detalles</a>
         </div>
       </div>
     </div>
-    <div>
-      <div>
-        <div class="card-cursos-2 d-flex m-2 p-0">
-          <%= image_tag "libros_3.jpg", class:"img-cursos"%>
-          <div class="card-curso">
-            <h5>Recursos gratuitos</h5>
-            <p>Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
-            <div class="text-center">
-              <a href="#" class="btn-yours-3">Ver detalles</a>
-            </div>
-          </div>
+    <div class="card-cursos-2 d-flex m-4 p-0">
+      <%= image_tag "analisis_estadistico_1", class:"img-cursos"%>
+      <div class="card-curso">
+        <h5>Estadística para tesis</h5>
+        <p>Te brindamos las herramientas estadísitcas para procesar los resultados de tu tesis</p>
+        <div class="text-center">
+          <a href="#" class="btn-yours-4">Ver detalles</a>
         </div>
       </div>
-      <div>
-        <div class="card-cursos-2 d-flex m-2 p-0">
-          <%= image_tag "libros_3.jpg", class:"img-cursos"%>
-          <div class="card-curso">
-            <h5>Recursos gratuitos</h5>
-            <p>Lo que necesitas saber para iniciar tu tesis.¡Te lo ofrecemos gratis!</p>
-            <div class="text-center">
-              <a href="#" class="btn-yours-3">Ver detalles</a>
-            </div>
-          </div>
+    </div>
+    <div class="card-cursos-2 d-flex m-4 p-0">
+      <%= image_tag "tutoria.jpg", class:"img-cursos"%>
+      <div class="card-curso">
+        <h5>Asesor de Tesis</h5>
+        <p>Te ofrecemos los aspectos básicos a tener en cuenta para sacar el máximo provecho a las entrevistas con tu asesor </p>
+        <div class="text-center">
+          <a href="#" class="btn-yours-4">Ver detalles</a>
         </div>
-      <br>
+      </div>
+    </div>
+    <div class="card-cursos-2 d-flex m-4 p-0">
+      <%= image_tag "met_1.jpg", class:"img-cursos"%>
+      <div class="card-curso">
+        <h5>¿Cuanti o Cuali?</h5>
+        <p>Selecciona la metodología ideal para tu tesis, te enseñamos lo que debes tener en cuenta</p>
+        <div class="text-center">
+          <a href="#" class="btn-yours-4">Ver detalles</a>
+        </div>
       </div>
     </div>
   </div>
