--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,12 +12,16 @@
 @import "components/index";
 @import "pages/index";
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-body{
-  background-color: white;
+body {
+  background-color: #eee;
 }
 
-h1, h2, h3, h4, p {
-  font-family: 'Poppins', sans-serif;
+h1,
+h2,
+h3,
+h4,
+p {
+  font-family: "Poppins", sans-serif;
 }
