--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -9,7 +9,7 @@
 .btn-yours:hover {
   text-decoration: none;
   color: black;
-  background: #FFE67D;
+  background: #ffe67d;
 }
 
 .btn-registro {
@@ -38,7 +38,7 @@
 .btn-yours-2:hover {
   text-decoration: none;
   color: black;
-  background: #FFE67D;
+  background: #ffe67d;
 }
 
 .btn-yours-3 {
@@ -53,5 +53,21 @@
 .btn-yours-3:hover {
   text-decoration: none;
   color: black;
-  background: #FFE67D;
+  background: #ffe67d;
+}
+
+.btn-yours-4 {
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.19);
+  color: black;
+  background: #ffdc5e;
+  padding: 10px 20px;
+  border-radius: 20px;
+  text-decoration: none;
+  width: 120px;
+}
+
+.btn-yours-4:hover {
+  text-decoration: none;
+  color: black;
+  background: #ffe67d;
 }
